commit for macbook

--- a/src/app/pages/Shared/checkout/checkout.component.html
+++ b/src/app/pages/Shared/checkout/checkout.component.html
@@ -1,9 +1,5 @@
-<div class="jumbotron text-center">
-  <button (click)="onCheckout()" routerLink="/join" class="btn btn-primary p-3">Payer</button>
-</div>
-
 <div class="form">
-  <h1>{{ title }}</h1>
+  <h1>Formulaire de paiment</h1>
   <div class="container">
     <div id="myPaymentForm"></div>
   </div>
