--- a/src/app/pages/Shared/checkout/checkout.component.scss
+++ b/src/app/pages/Shared/checkout/checkout.component.scss
@@ -6,4 +6,11 @@ h1 {
 .container {
   display: flex;
   justify-content: center;
+  height: auto;
+}
+
+#myPaymentForm{
+  display: flex;
+  align-items: center;
+  margin: 150px;
 }
